Changed whitespace formatting for blame output in Elegant template to pre-wrap (issue #340).

--- a/templates/Elegant/styles.css
+++ b/templates/Elegant/styles.css
@@ -613,7 +613,7 @@ body > #wrapper {
 
 #blame td.code {
 	text-align: left;
-	white-space: normal;
+	white-space: pre-wrap;
 }
 
 #blame td.code, #blame td.line {
